SET(CMAKE_BUILD_TYPE Debug)
add_executable(dp_1 dp_1.c)
add_executable(dynamic_alloc_array dynamic_alloc_array.c)
add_executable(longest_sub_array longest_sub_array.c)
add_executable(longest_palindrome_array longest_palindrome_array.c)
add_executable(longest_sum_in_array longest_sum_in_array.c)
add_executable(word_maze word_maze.c)
add_executable(377_NO_HuiWen 377_NO_HuiWen.c)
add_executable(xiaomaodiaoyu xiaomaodiaoyu.c)
add_executable(heap_min heap_min.c)